--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,39 @@
 * {
     margin: 0;
     padding: 0;
+    border: 0;
     box-sizing: border-box;
+}
+
+header {
+    background-color:white;
+    height:75px;
+    
+}
+
+
+ body {
+    background-color:rgba(211,211,211,.3)
+}  
+
+.logo {
+    padding-top:10px;
+    padding-bottom:10px;
+    vertical-align:middle;
+    display:inline-block;
+}
+
+.title {
+    font-size: 45px;
+}
+
+.container {
+    width:80%;
+    max-width: 1100px;
+    margin: auto;
+    margin-top:50px;
+    margin-bottom:50px;
+    border-radius:10px;
+    background-color:white;
+    
 }
