feat: to-do-list

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans serif;
 }
 
 header {
@@ -70,6 +71,7 @@ hr {
 
 .to-do-list {
     margin: 50px;
+
 }
 
 ul {
@@ -80,10 +82,70 @@ h2 {
     display: inline-block;
 }
 
-.task-type {
-    margin: 50px;
+.task-title {
+    margin-bottom: 50px;
 }
 
 .task {
-    margin: 25px;
+    margin-top: 25px;
+
+}
+
+/* &#10004 &#10005 */
+
+.check {
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    border: 1px solid;
+    display: inline-block;
+    text-align: center;
+    line-height: 15px;
+    font-weight: bold;
+}
+
+.completed {
+    color: lightgreen;
+    font-size: 10px;
+}
+
+.uncompleted {
+    color: red;
+    font-size: 10px;
+}
+
+.task-type {
+    color: white;
+    font-size: 10px;
+    padding: 5px;
+    height: 20px;
+    width: 60px;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    border-radius: 20px;
+}
+
+.editorial {
+    background-color: #45abea;
+}
+
+.goals {
+    background-color: #9c72e3;
+}
+
+.recruiting {
+    background-color: #63bfa8;
+}
+
+.mobile {
+    background-color: #f19a2d;
+}
+
+.website {
+    background-color: #d762a0;
+}
+
+.sales {
+    background-color: #afc826;
 }
